Fix transparent text accounts dark mode, change sidebar colors

--- a/src/modules/account/components/Accounts/accounts.css
+++ b/src/modules/account/components/Accounts/accounts.css
@@ -12,6 +12,7 @@
   & > span:first-child {
     margin-right: 10px;
     white-space: nowrap;
+    color: var(--color-content);
   }
 
   & .menuWrapper {
