--- a/src/modules/blockchainApplication/manage/components/ApplicationManagementRow/ApplicationManagementRow.css
+++ b/src/modules/blockchainApplication/manage/components/ApplicationManagementRow/ApplicationManagementRow.css
@@ -50,7 +50,7 @@
 
 .disabledWarningTooltip main {
   & > p {
-    --content-font: 'basier-circle';
+    --content-font: 'Inter';
 
     width: 200px;
     font-size: 12px;
