--- a/src/modules/common/components/bars/sideBar/sideBar.css
+++ b/src/modules/common/components/bars/sideBar/sideBar.css
@@ -118,15 +118,15 @@
 }
 
 .selected {
-  background: var(--color-secondary);
+  background: var(--color-primary);
   border-radius: 10px;
 
   & img {
-    filter: brightness(0);
+    filter: brightness(100);
   }
 
   & .label {
-    color: var(--color-eerie);
+    color: var(--color-constant-white);
   }
 }
 
