--- a/src/modules/transaction/components/TransactionDetailRow/TransactionDetailRow.css
+++ b/src/modules/transaction/components/TransactionDetailRow/TransactionDetailRow.css
@@ -65,7 +65,7 @@
 }
 
 .expandToggle {
-  --content-font: 'basier-circle';
+  --content-font: 'Inter';
 
   height: initial !important;
   padding-left: 5px !important;
